
syntax = "proto3";

package api.core.v1;

import "protoc-gen-openapiv2/options/annotations.proto";


option go_package = "github.com/tkeel-io/core/api/core/v1;v1";
option java_multiple_files = true;
option java_package = "api.core.v1";


message PatchData {
    string path = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "entity property path"}];
    string operator = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "operator"}];
    bytes value = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "operator value"}];
}


message PatchDatas {
    repeated PatchData patches = 1;
}



message SystemData {
    string operator = 1;
    bytes data      = 2;
}


message SyncData {
    repeated string paths = 1;
    bytes state = 2;
}


message ProtoEvent {
    string id = 1;
    int64 timestamp = 2;
    string callback = 3;
    map<string, string> metadata = 4;
    oneof data {
        bytes raw_data = 8;
        PatchDatas patches = 9;
        SystemData system_data = 10;
    }
}
















